# unity-asset-graph-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: asset.rs  asset_type.rs  database.rs  id.rs  lib.rs  main.rs  parser.rs  parsers.rs  progress.rs  storage.rs  util.rs  version.rs
src/database/: assets.rs  populate_pass1.rs  populate_pass2.rs  populate_pass3.rs  roots.rs
src/parser/: csharp.rs  csharp_test.cs  directory.rs  loc_manager.rs  loc_override.rs  loc_resource.rs  loc_text.rs  localized_text.rs  manifest_json.rs  package_json.rs  unity.rs
src/parser/csharp/: find_locstrings.rs  find_types.rs  qualified_name.rs  queries.rs  scope.rs  structure.rs  type_broker.rs
src/parser/csharp/qualified_name/: full.rs  owned.rs  partial.rs  ref.rs  search.rs
src/parser/csharp/test/: ns_test.cs  type_test.cs  var_test.cs
src/parsers/: localized_text.rs  unity.rs
test.unity/: .gitignore
test.unity/ProjectSettings/: ProjectSettings.asset
