[package]
name = "asset-graph-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["locstring"]
locstring = []

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.11.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
tree-sitter = "0.25.9"
tree-sitter-c-sharp = "0.23.1"
uuid = { version = "1.17.0", features = ["serde", "v5"] }
