[package]
name = "unity-asset-graph"
version = "0.2.1"
description = "Query relationships between Unity engine assets/scripts"
repository = "https://github.com/microsoft/unity-asset-graph-rs"
license = "MIT"
keywords = ["unity3d", "unity", "analysis"]
categories = ["command-line-utilities", "game-development"]
edition = "2024"
default-run = "uag"
autobins = false

[[bin]]
name = "uag"
path = "src/bin/uag/main.rs"
doc = true

[features]
default = []
locstring = []

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.40", features = ["derive"] }
const_format = "0.2.35"
regex = "1.11.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
tree-sitter = "0.25.9"
tree-sitter-c-sharp = "0.23.1"
uuid = { version = "1.17.0", features = ["serde", "v5"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
